[gd_scene load_steps=6 format=3 uid="uid://c43soeeeb3e55"]

[ext_resource type="Script" path="res://Scenes/UI/OptionsMenu.gd" id="1_dhh31"]
[ext_resource type="Theme" uid="uid://qlxfj67v1cjh" path="res://Assets/UI/Default.tres" id="2_gt67f"]
[ext_resource type="FontFile" uid="uid://ccvf4a7kt70jt" path="res://Assets/UI/Fonts/PIXEAB__(8).TTF" id="3_to7le"]

[sub_resource type="InputEventAction" id="InputEventAction_4yfdf"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_jmq6f"]
events = [SubResource("InputEventAction_4yfdf")]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhh31")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.12549, 0.172549, 0.698039)

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.324074
anchor_right = 0.5
anchor_bottom = 0.324074
offset_left = -98.0
offset_top = -60.5
offset_right = 98.0
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gt67f")
theme_override_colors/font_color = Color(0.972549, 0.772549, 0.227451, 1)
theme_override_fonts/font = ExtResource("3_to7le")
theme_override_font_sizes/font_size = 32
text = "TITLE"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -96.5
offset_right = 127.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gt67f")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -49.0
offset_right = 55.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="PrincipalAction" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gt67f")
shortcut = SubResource("Shortcut_jmq6f")
text = "Principal"

[node name="MainMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gt67f")
text = "Main Menu
"

[node name="Quit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gt67f")
text = "Quit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/PrincipalAction" to="." method="_on_principal_action_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Quit" to="." method="_on_exit_pressed"]
